new api fixes
